# Classwork

./: CMakeLists.txt  sales1.txt  sales10.txt  sales11.txt  sales12.txt  sales13.txt  sales14.txt  sales15.txt  sales16.txt  sales17.txt  sales18.txt  sales19.txt  sales2.txt  sales20.txt  sales3.txt  sales4.txt  sales5.txt  sales6.txt  sales7.txt  sales8.txt  sales9.txt  sections1.c  sections2.c  staplemax.cpp
