cmake_minimum_required(VERSION 3.9)
project(CPSC3500HW3)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
add_executable(CPSC3500HW3 staplemax.cpp sales1.txt sales2.txt sales3.txt sales4.txt sales5.txt sales6.txt sales7.txt sales8.txt sales9.txt sales10.txt sales11.txt sales12.txt sales13.txt sales14.txt sales15.txt sales16.txt sales17.txt sales18.txt sales19.txt sales20.txt)
